--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,26 @@
   font-size: xx-large;
 }
 
+.hover-effect {
+  transition: transform 0.2s ease;
+  transform: scale(1);
+}
+
+.hover-effect:hover {
+  transform: scale(1.01);
+}
+
+.navbar-links {
+  transition: transform 0.2s ease;
+  transform: scale(1);
+}
+.navbar-links:hover {
+  text-decoration: none;
+  background-color: transparent;
+  transform: none;
+  box-shadow: none;
+  transform: scale(1.01);
+}
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
